--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 notify-rust = "4.0.0"
 clap = "3.0.0-beta.1"
+rand = "0.7.3"
 
 [dependencies.tokio]
 version = "0.2.21"
